--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <gradient
-        android:startColor="@color/purple_extra_light"
-        android:centerColor="@color/purple_light"
-        android:endColor="@color/purple"
+        android:startColor="@color/sexy_pink_light"
+        android:endColor="@color/sexy_pink"
         android:type="linear"
         android:angle="135"/>
 </shape>
