--- a/app/src/main/res/layout/activity_join_group.xml
+++ b/app/src/main/res/layout/activity_join_group.xml
@@ -6,111 +6,51 @@
     cancel button: join_group_cancel_button
     -->
 <LinearLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-android:paddingRight="@dimen/activity_horizontal_margin"
-android:paddingTop="@dimen/activity_vertical_margin"
-android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainPage"
-android:orientation="vertical"
-android:background="@color/dark_grey"
-    >
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainPage"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/group_create"
+    <include layout="@layout/toolbar"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/large_padding"
+        android:layout_gravity="center_horizontal"
+
+        android:text="join or create group using 4 digits"
+        android:gravity="center_horizontal"
+        android:textSize="@dimen/medium_text_size"
+        android:textColor="@color/grey"
+        android:textStyle="bold"
+        />
+
+    <EditText
+        android:id="@+id/join_group_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
-        android:orientation="horizontal">
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:onClick="cancel">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:padding="@dimen/small_padding"
-                android:gravity="center"
 
-                android:text="Cancel"
-                android:textSize="@dimen/button_text_size"
-                android:textStyle="bold"
-                android:textColor="@color/white"
-                />
-        </LinearLayout>
+        android:inputType="number"
+        android:textAlignment="center"
+        android:maxLength="4"
+        android:hint="ex:1234"
+        android:textColorHint="@color/grey"
+        android:textSize="@dimen/large_text_size"
+        android:textColor="@color/black"
+        />
 
-        <View
-            android:paddingLeft="@dimen/medium_padding"
-            android:paddingRight="@dimen/medium_padding"
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="@color/grey"/>
+    <TextView
+        android:id="@+id/join_group_hint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
 
-        <LinearLayout
-            android:id="@+id/group_join"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:onClick="confirm">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/small_padding"
-                android:gravity="center"
-
-                android:text="OK"
-                android:textSize="@dimen/button_text_size"
-                android:textStyle="bold"
-                android:textColor="@color/white"/>
-        </LinearLayout>
-    </LinearLayout>
-
-<View
-    android:layout_marginTop="@dimen/medium_padding"
-    android:layout_marginBottom="@dimen/medium_padding"
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:background="@android:color/darker_gray"/>
-
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
-
-    android:text="join or create group using 4 digits"
-    android:gravity="center_horizontal"
-    android:textSize="@dimen/medium_text_size"
-    android:textColor="@color/grey"
-    android:textStyle="bold"
-    />
-
-<EditText
-    android:id="@+id/join_group_password"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
-    android:gravity="center_horizontal"
-
-    android:inputType="number"
-    android:textAlignment="center"
-    android:maxLength="4"
-    android:hint="ex:1234"
-    android:textColorHint="@color/grey"
-    android:textSize="@dimen/large_text_size"
-    android:textColor="@color/white"
-    />
-
-<TextView
-    android:id="@+id/join_group_hint"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-
-    android:textSize="@dimen/medium_text_size"
-    android:gravity="center"
-    android:textColor="@color/white"/>
+        android:textSize="@dimen/medium_text_size"
+        android:gravity="center"
+        android:textColor="@color/white"/>
 </LinearLayout>
